--- a/index.html
+++ b/index.html
@@ -2,28 +2,7 @@
 <html>
     <head>
         <title>Web App – Simple Interest Calculator</title>
-    <script type="application/javascript">
-        function checkdata(){
-            var amount document.getElementById("principal");
-            //Check if amount is zero
-          if(amount.value == 0){
-                alert("Please enter a positive number");
-                amount.focus();
-                return false;
-          }
-          //Check if amount less than zero
-          if(amount.value < 0){
-                alert("Please enter a positive number");
-                amount.focus();
-                return false;
-          }
-          if(amount.value == ""){
-                alert("Please enter a positive number");
-                amount.focus();
-                return false;
-          }
-          return true;
-    </script>
+     <script = scr"script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -51,7 +30,6 @@
             <option value="8">8</option>
             <option value="9">9</option>
             <option value="10">10</option>
-            <!-- fill in the rest of the values-->
         </select>
         <br>
         <br>
